Fix navbar not showing up on desktop

--- a/src/styles/partials/_index.scss
+++ b/src/styles/partials/_index.scss
@@ -15,8 +15,8 @@
     color: #fff;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
-    justify-content: flex-end;
+    align-items: center;
+    justify-content: center;
     padding-right: 0.5rem;
 
     h1 {
@@ -25,7 +25,7 @@
       color: #fff;
       padding: 0;
       font-weight: 400;
-      font-size: 5rem;
+      font-size: 6rem;
     }
 
     h1 span {
@@ -42,16 +42,15 @@
     p {
       max-width: 80%;
       line-height: 160%;
-      text-align: right;
       padding-right: 0.5rem;
       font-size: 5vw;
+      text-align: center;
     }
 
     @media (min-width: 900px) {
       height: 100vh;
       p {
-        font-size: 3.5vw;
-        max-width: 50%;
+        font-size: 1.75vw;
       }
     }
   }
