--- a/src/styles/partials/_navbar.scss
+++ b/src/styles/partials/_navbar.scss
@@ -1,22 +1,29 @@
 .navbar {
   @media screen and (min-width: 900px) {
+    position: relative;
     display: inline-block;
     font-family: 'Raleway', sans-serif;
-    li {
-      text-transform: uppercase;
-      float: left;
-      font-size: initial;
-    }
+    transform: none;
+    transition: none;
+    width: auto;
   }
 
   ul {
     list-style-type: none;
+    padding: 0;
     li {
       font-size: 1.5rem;
       padding: 0.5rem 0;
       margin-right: 1rem;
       margin-bottom: 0;
       border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+      @media screen and (min-width: 900px) {
+        text-transform: uppercase;
+        float: left;
+        font-size: 1rem;
+        border-bottom: 0;
+        padding: 0;
+      }
       &:last-of-type {
         border-bottom: none;
       }
